--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h2>📄 Detalle completo de solicitudes de acceso y reclamaciones <span id="yearTitle"></span></h2>
             <div class="table-wrapper">
                 <table id="dataTable">
-                    <thead><tr><th>Nº Expte.</th><th>Fecha Entrada</th><th>Solicitante</th><th>Resumen de lo Solicitado</th><th>Forma Acceso</th><th>Vía Contacto</th><th>Tiempo Resolución</th><th>Sentido Resolución</th><th>Motivo Denegación</th><th>Reclamación CT</th></tr></thead>
+                    <thead><tr><th>Nº Expte.</th><th>Fecha Entrada</th><th>Solicitante (previo consentimiento)</th><th>Resumen de lo Solicitado</th><th>Forma Acceso</th><th>Vía Contacto (previo consentimiento)</th><th>Resolución (en días hábiles) - suspensión</th><th>Sentido Resolución</th><th>Motivo Denegación</th><th>Reclamación Consejo Transparencia CM</th></tr></thead>
                     <tbody id="tableBody"></tbody>
                 </table>
             </div>
